# tiny-orm

./: .gitignore  README.md  config.py  example.env  pyproject.toml  requirements.txt  student_info.py
MySQL/src/: main.py  settings.py
MySQL/src/classes/: crud_operations.py  db_connections.py
src/: main.py  settings.py  utils.py
src/classes/: Config.py  CrudOperations.py  DbConnections.py  SchoolDb.py  Student.py  Teacher.py
